--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,11 +9,17 @@
         <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown" appDropdown>
+        <ng-template [ngIf]="!isAuthenticated">
+          <li><a style="cursor: pointer" routerLink="/signup">Register</a></li>
+          <li><a style="cursor: pointer" routerLink="/signin">Login</a></li>
+        </ng-template>
+        <li *ngIf="isAuthenticated"><a style="cursor: pointer" (click)="onLogout()" >Logout</a></li>
+
+        <li class="dropdown" appDropdown *ngIf="isAuthenticated">
           <a style="cursor: pointer" class="dropdown-toggle" role="button">Menage <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a style="cursor: pointer">Save Data</a></li>
-            <li><a style="cursor: pointer">Fetch Data</a></li>
+            <li><a style="cursor: pointer" (click)="onSaveData()">Save Data</a></li>
+            <li><a style="cursor: pointer" (click)="onFeathData()">Fetch Data</a></li>
           </ul>
         </li>
       </ul>
